fairly final touches

--- a/IDV608_2-master/Login_1DV608-master/eng.ini
+++ b/IDV608_2-master/Login_1DV608-master/eng.ini
@@ -3,4 +3,12 @@ username_missing = "Username is missing"
 password_missing = "Password is missing"
 login_success = "Welcome"
 login_fail = "Wrong name or password"
-logout_success = "Bye bye"
+logout_success = "Bye bye!"
+
+[register]
+username_missing = "Username has too few characters, at least 3 characters. Password has too few characters, at least 6 characters."
+password_missing = "Password has too few characters, at least 6 characters."
+repeat_password_fail = "Passwords do not match."
+username_exists = "User exists, pick another username."
+invalid_char = "Username contains invalid characters."
+registration_success = "Registered new user."
